--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,82 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.container{
+    width:100%;
+    height: 310vh;
+    background-image: url('/images/home-background.png');
+    background-repeat: no-repeat;
+    background-size:cover ;
+    z-index: -1;
+   position:absolute;
+   top:60px;
+    
+}
+.overall{
+    width:100%;
+    height: auto;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
+.Slider{
     width: 100%;
-    flex-direction: column;
-  }
+    height: 400px;
+    
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    top:20px;
+    
 }
+.img{
+    width: 100%;
+    height: 400px;
+
+    cursor: pointer;
+}
+.img:hover{
+    width: 100%;
+    border:2px solid white;
+
+}
+.img1{
+    width:250px;
+    height:200px;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.videos{
+    width: 90%;
+    height: 100px;
+    display:grid;
+    grid-template-columns: auto auto auto auto auto;
+    place-items: center;
+    grid-column-gap: 10px;
+    margin-top:120px;
+   margin-left: 25px;
+    position: relative;
+
+}
+.video{
+    width:250px;
+    height:150px;
+    border-radius:5px;
+    border:1px solid white;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 5px 28px 50px 7px rgba(0,0,0,0.94);
+}
+.vid{
+    width:250px;
+    height: 100%;
+    opacity: 0;
+}
+.video:hover .vid{
+    opacity: 1;
+}
+.video:hover{
+    transition: .1s ease;
+    transform: scale(1.05);
+    border:2px solid white;
+
+}
+
+
